--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-  <div>
+  <main>
     {{ content }}
-  </div>
+  </main>
   <script src="/assets/js/test.js"></script>
 </body>
 </html>
