--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,9 @@
 ---
 ---
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
 @import "reset";
-@import "colors";
 @import "variables";
 @import "layout";
+@import "typography";
+@import "forms";
+@import "components";
