--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,11 +12,13 @@ body {
   margin: 0;
   padding: 0;
   transition: background-color 0.4s ease-in-out, color 0.4s ease-in-out;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 // Main container
 main {
-  max-width: 800px;
+  max-width: $container-max-width;
   margin: 0 auto;
   padding: 2rem;
   display: flex;
