--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% if page.title %}{{ page.title }}{% else %}Minimal Jekyll Site{% endif %}</title>
+  <title>{% if page.page_title %}{{ page.page_title }}{% else %}Minimal Jekyll Site{% endif %}</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
@@ -14,17 +17,19 @@
 
   <!-- Main Content -->
   <main>
-    {{ content }}
+    <div class="container">
+      {{ content }}
+    </div>
   </main>
 
   <!-- Mobile Navigation Drawer -->
-  <aside>
+  <div class="menu">
     {% include navigation.html type="mobile" %}
-  </aside>
+  </div>
 
   <!-- Navigation Overlay -->
   <div class="nav-overlay"></div>
 
-  <script src="/assets/js/test.js"></script>
+  <script src="/assets/js/menu.js"></script>
 </body>
 </html>
