--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,7 +15,7 @@
   </nav>
 {% else %}
   <nav>
-    <h3><a href="/">Brutalist</a></h3>
+    <h3><a href="/">Home</a></h3>
     <div class="nav-links">
       {{ nav_links }}
     </div>
