--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -13,7 +13,7 @@ button {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  min-height: 60px;
+  min-height: 3rem;
   white-space: nowrap;
   
   &:hover {
@@ -91,7 +91,7 @@ form {
   
   textarea {
     resize: vertical;
-    min-height: 120px;
+    min-height: 6rem;
     line-height: 1.4;
   }
   
@@ -142,8 +142,8 @@ form {
     
     input[type="checkbox"],
     input[type="radio"] {
-      width: 20px;
-      height: 20px;
+      width: 1.5rem;
+      height: 1.5rem;
       margin: 0;
       cursor: pointer;
     }
@@ -157,12 +157,3 @@ form {
     align-self: flex-start;
   }
 }
-
-// Dark mode form adjustments
-@media (prefers-color-scheme: dark) {
-  // Dark mode styling handled by CSS custom properties
-}
-
-@media (prefers-color-scheme: light) {
-  // Light mode styling handled by CSS custom properties
-} 
