--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -19,10 +19,15 @@
     <div class="nav-links">
       {{ nav_links }}
     </div>
-    <div class="hamburger">
-      <div class="hamburger-line"></div>
-      <div class="hamburger-line"></div>
-      <div class="hamburger-line"></div>
+    <div class="nav-actions">
+      <button class="theme-toggle" id="theme-toggle" aria-label="Toggle theme">
+        <span class="theme-icon">🌙</span>
+      </button>
+      <div class="hamburger">
+        <div class="hamburger-line"></div>
+        <div class="hamburger-line"></div>
+        <div class="hamburger-line"></div>
+      </div>
     </div>
   </nav>
 {% endif %} 
