--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -21,7 +21,7 @@
 
 h1 {
   font-size: 2.4rem;
-  line-height: 1.2;
+  line-height: 1.2em;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.1em;
@@ -29,7 +29,7 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  line-height: 1.3;
+  line-height: 1.4em;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.1em;
@@ -37,7 +37,7 @@ h2 {
 
 h3 {
   font-size: 1.5rem;
-  line-height: 1.3;
+  line-height: 1.4em;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.1em;
@@ -47,7 +47,7 @@ h3 {
 p {
   font-weight: 400;
   hyphens: auto;
-  line-height: 1.6;
+  line-height: 1.4em;
 }
 
 // Links
