--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,10 +11,8 @@ body {
   font-family: $font-family;
   background: $background;
   color: $text-color;
-  line-height: 1.4;
+  line-height: 1.4em;
   font-weight: 400;
-  margin: 0;
-  padding: 0;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -38,10 +36,6 @@ main {
   position: relative;
   width: 100%;
   box-sizing: border-box;
-
-  @media (max-width: $mobile-breakpoint) {
-    padding: 1rem;
-  }
 }
 
 .container {
