--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -2,20 +2,9 @@
 // Headings
 
 .container {
-  
-  h1, h2, h3 {
+  & > h1, & > h2, & > h3, & > h4, & > h5, & > p {
     margin-top: 0.75rem;
     margin-bottom: 0.75rem;
-  }
-  
-  p {
-    margin-bottom: 0.75rem;
-  }
-
-  section {
-    h1, h2, h3, h4, h5, h6, p {
-      margin: 0;
-    } 
   }
 }
 
@@ -23,24 +12,18 @@ h1 {
   font-size: 2.4rem;
   line-height: 1.2em;
   font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
 }
 
 h2 {
   font-size: 2rem;
   line-height: 1.4em;
   font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
 }
 
 h3 {
   font-size: 1.5rem;
   line-height: 1.4em;
   font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
 }
 
 // Paragraphs and text
